# AiCenter

./: .gitignore  manage.py  pyproject.toml
AiCenter/: asgi.py  settings.py  urls.py
application/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
center/: urls.py
center/management/commands/: heartbeat.py
center/models/: __init__.py  ai.py  center_file.py  dataset.py  worker.py  workflow.py
center/serializers/: __init__.py  ai.py  dataset.py  train_config.py  train_config_file.py  train_task.py  worker.py
center/tasks/: __init__.py  requirements.txt  train_task.py
center/tasks/workflow/steps/: __init__.py  base.py  venv.py
center/views/: __init__.py  ai.py  power.py  train_config.py  train_config_file.py  train_plan.py  train_task.py  worker.py
center/views/dataset/: __init__.py  tool.py  view.py
center/views/webhook/: __init__.py  view.py
enums/: __init__.py  file_method.py  train_task_status.py  viewset_method.py
plugin/: PULC.py  __init__.py  plugin_tool.py
plugins/pulc/: app.py  env.py  heart.py  pulc.py
sdk/: plugin_tool.py
test/: test_jenkins.py
utils/: IntegerEnumField.py  __init__.py  base_model.py  choice_enum.py  jenkins.py  json_response.py  optional_slash_router.py  pagination.py  retry_time.py  serializers.py  viewset.py
